[gd_scene load_steps=7 format=2]

[ext_resource path="res://Minigames/Barman/Images/BarCounter.png" type="Texture" id=1]
[ext_resource path="res://Minigames/Barman/Images/BarBottles.png" type="Texture" id=2]
[ext_resource path="res://Minigames/Barman/Images/BrickWall.png" type="Texture" id=3]
[ext_resource path="res://Minigames/Barman/Images/BarmanSheet.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Shop.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Bartender"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 7.76181, 76.5041 )
texture = ExtResource( 3 )

[node name="BarBottles" type="Sprite" parent="Background"]
position = Vector2( 37.2382, -26.5041 )
texture = ExtResource( 2 )

[node name="BarmanSheet" type="Sprite" parent="Background"]
position = Vector2( 34.6989, 7.22141 )
scale = Vector2( 1.59094, 1.59094 )
texture = ExtResource( 4 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/BarmanSheet"]
autoplay = "Bartender"
method_call_mode = 1
anims/Bartender = SubResource( 1 )

[node name="Counter" type="Sprite" parent="Background"]
position = Vector2( 37.4725, 28.7302 )
texture = ExtResource( 1 )

[node name="Game" type="Control" parent="."]
margin_left = 0.374573
margin_top = 0.37458
margin_right = 90.3746
margin_bottom = 160.375
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Game"]
margin_right = 90.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_stats" type="RichTextLabel" parent="Game"]
margin_top = 136.0
margin_right = 90.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="Label" parent="Game/player_stats"]
margin_left = 1.0
margin_top = -1.37457
margin_right = 33.0
margin_bottom = 14.6254
text = "Life"

[node name="sanity" type="Label" parent="Game/player_stats"]
margin_left = -0.0964241
margin_top = 9.62543
margin_right = 39.9036
margin_bottom = 25.6254
text = "Sanity"

[node name="money" type="Label" parent="Game/player_stats"]
margin_left = 57.9036
margin_top = 7.0
margin_right = 77.9036
margin_bottom = 23.0
text = "$"

[node name="Button" type="Button" parent="Game"]
margin_left = 13.6254
margin_top = 119.625
margin_right = 76.6254
margin_bottom = 131.625
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionA" type="Button" parent="Game"]
margin_left = 2.90358
margin_top = 91.9853
margin_right = 27.9036
margin_bottom = 116.985
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionB" type="Button" parent="Game"]
margin_left = 31.6254
margin_top = 91.9853
margin_right = 56.6254
margin_bottom = 116.985
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionC" type="Button" parent="Game"]
margin_left = 61.6254
margin_top = 91.9853
margin_right = 86.6254
margin_bottom = 116.985
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Game/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Game/OptionA" to="." method="_on_OptionA_mouse_entered"]
[connection signal="pressed" from="Game/OptionA" to="." method="_on_OptionA_pressed"]
[connection signal="mouse_entered" from="Game/OptionB" to="." method="_on_OptionB_mouse_entered"]
[connection signal="pressed" from="Game/OptionB" to="." method="_on_OptionB_pressed"]
[connection signal="mouse_entered" from="Game/OptionC" to="." method="_on_OptionC_mouse_entered"]
[connection signal="pressed" from="Game/OptionC" to="." method="_on_OptionC_pressed"]
